# tablecube

./: .gitignore
api/: additemtobookinginput.doc.html  additemtotableinput.doc.html  booking.doc.html  bookingitem.doc.html  bookingstatus.doc.html  boolean.doc.html  changebookingstatusinput.doc.html  createbookinginput.doc.html  createmenuiteminput.doc.html  createtableinput.doc.html  date.doc.html  deprecated.doc.html  directive.spec.html  directivelocation.spec.html  editrestaurantinfoinput.doc.html  edittableinput.doc.html  enumvalue.spec.html  field.spec.html  float.doc.html  id.doc.html  include.doc.html  index.html  inputvalue.spec.html  joinbookinginput.doc.html  loginresponse.doc.html  menuitem.doc.html  menuitemtype.doc.html  mutation.doc.html  query.doc.html  restaurant.doc.html  schema.spec.html  skip.doc.html  specifiedby.doc.html  string.doc.html  subscription.doc.html  table.doc.html  tableupdateevent.doc.html  type.spec.html  typekind.spec.html  user.doc.html  (+4 more)
doc/: authors.txt  code-report.txt  readme.md
src/backend/: .env.example  Dockerfile  README.md  codegen.yml  docker-compose-prod.yaml  docker-compose.yaml  graphql.schema.json  nodemon.json  package-lock.json  package.json  spectaql.yml
src/backend/prisma/: schema.prisma  seed.ts
src/backend/src/: index.ts  schema.graphql  utils.ts
src/frontend/: README.md  pubspec.yaml
src/frontend/android/: build.gradle
src/frontend/lib/: api.dart  constants.dart  main.dart  utils.dart
src/frontend/web/: index.html
src/rpi-ctl/: .gitignore  Dockerfile  Pipfile  README.md  main.py  pyproject.toml
(+68 files in other folders)
