[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Adrian Busse", email = "git@adrianmxb.com"},
]
dependencies = ["keybow", "RPi.GPIO", "gql[websockets,requests]", "pyjwt", "python-dotenv"]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]
allow_prereleases = true
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"
[tool.pdm.dev-dependencies]
dev = []

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
